flapivor/tests/m1/hopix/parser/bad/108-type-ascription-1.hopix
val main =
 case you { (me : 0) => me }